# drf-serializer-inference

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  index.html  mkdocs.yml  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
search/: search_index.json
serializer_inference/: __init__.py  inference.py  serializers.py  typing.py  utils.py
tests/: arg_spec_functions.py  conftest.py  test_inference.py  test_serializers.py
